fix z-index for dropdown menu

--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -90,9 +90,11 @@ header {
     clear: both;
     max-height: 0;
     transition: max-height 0.2s ease-out;
-    background-color: $color-white;
     box-shadow: 0px 3px 6px #00000029, 0px -3px 6px #00000029;
     margin: 0 -15px 0 -15px;
+    background-color: $color-white;
+    position: relative;
+    z-index: 2;
 
     @media (min-width: 760px) {
       clear: none;
@@ -106,6 +108,7 @@ header {
   .header__nav {
     li {
       padding-left: 25px;
+
       @media (min-width: 760px) {
         float: left;
         padding: 0 50px 0 0;
